tests/Checker/everything/errors/9a.vc
int main() {
    "test" + 3;
    return 1;
}
